# config-rs-ng

./: .gitlint  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  VISION.md  flake.nix
.github/workflows/: ci.yml  flake-update-nixpkgs.yml  flake-update-rust-overlay.yml  flake.yml
config_rs_ng_derive/: Cargo.toml
config_rs_ng_derive/src/: config_constructor.rs  from_config_element.rs  lib.rs
examples/: async_file.rs  file.rs  layers.rs  simple.rs
src/: accessor.rs  lib.rs
src/config/: async_builder.rs  async_config.rs  builder.rs  config.rs  construct.rs  error.rs  layers.rs  mod.rs
src/element/: json.rs  mod.rs  toml.rs
src/object/: mod.rs
src/source/: async_source.rs  file.rs  format.rs  mod.rs  string.rs
tests/: construct.rs  format.rs  layers.rs  proc_macro.rs  reload.rs
