[package]
name = "config-rs-ng"
version = "0.1.0"
edition = "2021"

authors = ["Matthias Beyer <mail@beyermatthias.de>"]
categories = ["config"]
description = "Layered configuration system for Rust applications."
keywords = ["config", "configuration", "settings", "env", "environment"]
license = "MIT/Apache-2.0"
readme = "README.md"

homepage = "https://github.com/matthiasbeyer/config-rs-ng"
repository = "https://github.com/matthiasbeyer/config-rs-ng"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.8", features = ["derive"] }
thiserror = "1"
url = "2.2"

serde_json = { version = "1.0.2", optional = true }
toml = { version = "0.5", optional = true }

[features]
default = ["json", "toml"]
json = ["serde_json"]
toml = ["dep:toml"]

