[package]
name = "config_rs_ng_derive"
version = "0.1.0"
edition = "2021"

authors = ["Matthias Beyer <mail@beyermatthias.de>"]
categories = ["config"]
description = "Layered configuration system for Rust applications."
keywords = ["config", "configuration", "settings", "env", "environment"]
license = "MIT/Apache-2.0"

homepage = "https://github.com/matthiasbeyer/config-rs-ng"
repository = "https://github.com/matthiasbeyer/config-rs-ng"

[lib]
proc-macro = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
syn = "1.0.109"
quote = "1.0.23"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.50"
